# BSc-project-20-21

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  blonde_mapper.cpp  travis.yml
blue_alignment/: CMakeLists.txt  blue_alignment.cpp  blue_alignment.hpp
blue_alignment/include/alignment/: blue_alignment.hpp
blue_alignment/src/: blue_alignment.cpp
blue_minimizers/: CMakeLists.txt  blue_minimizers.cpp  blue_minimizers.hpp
blue_minimizers/test/: blue_minimizers_test.cpp
brown_mapper/: .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  brown_alignment.cpp  brown_alignment.hpp  brown_mapper  brown_mapper.cpp  brown_minimizer.cpp  brown_minimizer.hpp  brown_minimizer2.cpp  cmake_install.cmake
brown_mapper/include/: CMakeLists.txt  brown_alignment.cpp  brown_minimizer.cpp
brown_mapper/tests/: brown_align_tests.cpp  brown_minimizers_tests.cpp
include/: blue_mapper.hpp  matcher.hpp
include/align/: pink_alignment.hpp
include/bioparser/: fasta_parser.hpp  sequence.hpp
include/demo/: pink_demo.hpp
include/help/: help.txt
include/minimizers/: pink_minimizers.hpp
pink_mapper/src/: CMakeLists.txt  Pink_mapperConfig.h.in  fastq_parser.hpp  help.txt  pink_mapper.cpp
src/: CMakeLists.txt  blonde_alignment.cpp  blonde_alignment.h  blonde_mapper.cpp  blonde_minimizers.cpp  blonde_minimizers.h  blue_mapper.cpp  blue_mapper.hpp.in  fasta_parser.hpp  fastq_parser.hpp  orange_mapper.cpp  pink_mapper.cpp  projectControl.h  projectControl.h.in  sequence.hpp  white_alignment.cpp  white_alignment.h  white_alignment.hpp  white_mapper.cpp  white_minimizers.cpp  white_minimizers.hpp
src/bioparser/: parser.hpp
src/orange_mapper/: CMakeLists.txt  orange_alignment.cpp  orange_alignment.h  orange_mapper  orange_mapper.cpp
src/orange_mapper/bioparser/: Makefile  cmake_install.cmake
src/orange_mapper/orange_alignment/: CMakeLists.txt  orange_alignment.cpp  orange_alignment.h
src/orange_mapper/orange_minimizer/: CMakeLists.txt  orange_minimizer.cpp  orange_minimizer.h
src/orange_mapper/test/: alignment_test.cpp  minimizer_test.cpp  orange_alignment_test.cpp  orange_mapper_test.cpp  orange_minimizers_test.cpp
test/: blonde_alignment_test.cpp  blue_alignment_test.cpp  blue_minimizers_test.cpp  pink_alignment_test.cpp  pink_mapper_test.cpp  white_alignment_test.cpp  white_minimizers_test.cpp
